boost1.74 (1.74.0-17) UNRELEASED; urgency=medium

  * Fix FTBFS with libxslt version 1.1.35 (closes: #1016321, #1015095).

 -- Giovanni Mascellani <gio@debian.org>  Sat, 27 Aug 2022 09:23:44 +0200

boost1.74 (1.74.0-16.1) unstable; urgency=medium

  * Non-maintainer upload.
  * debian/patches/74a94fe7f47b2e3f707cf4589fbb635a50f22ad2.patch:
    - cherry-pick upstream asio change to fix exit failures with openssl 3.0.4
      Closes: #1014180, #1013530, #1013472 and many others probably

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 04 Jul 2022 09:34:02 +0200

boost1.74 (1.74.0-16) unstable; urgency=medium

  [ Bernhard Übelacker ]
  * [fa25a26] Make enum fix used at i386, armhf and armel.

 -- Anton Gladky <gladk@debian.org>  Thu, 02 Jun 2022 06:26:21 +0200

boost1.74 (1.74.0-15) unstable; urgency=medium

  [ Bernhard Übelacker ]
  * [9826f74] Fix enums at i386. 
  * [7f367ea] Add test for enums.

 -- Anton Gladky <gladk@debian.org>  Tue, 31 May 2022 06:52:56 +0200

boost1.74 (1.74.0-14) unstable; urgency=medium

  * Fix b2 compilation on kFreeBSD (closes: #1003384).
  * Fix missing UTIME_OMIT symbol on kFreeBSD.

 -- Giovanni Mascellani <gio@debian.org>  Fri, 14 Jan 2022 09:41:55 +0100

boost1.74 (1.74.0-13) unstable; urgency=medium

  [ Anton Gladky ]
  * Import fixes from Ubuntu
  * [fabaa30] Import upstream patch:
    fix asio compilation with -fno-rtti. (Closes: #999778)

  [ Matthias Klose ]
  * [2098d38] Explicitly set fpu mode on armhf. (Closes: #999853)

  [ Graham Inggs ]
  * [107cd01] Cherry-pick upstream commits:
      - Convert Python 3.1+ to use public C API for filenames
      - Replace private _Py_fopen() with public fopen(): private _Py_fopen()
      - Fix Python 3.10 (PEP-620) incompatibility

  [ Gianfranco Costamagna ]
  * [7d6aad9] Cherry-pick upstream commits:
    Cherry-pick upstream commits:
      - e193f080c7d209516ac9b712fa0c50bb08026fa2.patch
        Fix regex to allow search for python3.10 too (fixes e.g.