@@ -337,10 +337,10 @@ override_dh_install-indep: override_dh_install-common
 override_dh_makeshlibs:
 	dh_makeshlibs -plibboost-regex$(SOVERSION) -V '$(regexicuabi)'
 	dh_makeshlibs --remaining-packages
-	sed -i -r 's/^(libboost_python([0-9]{2}) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-python$(SOVERSION)/DEBIAN/shlibs
-	sed -i -r 's/^(libboost_mpi_python([0-9]{2}) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-mpi-python$(SOVERSION)/DEBIAN/shlibs
+	sed -i -r 's/^(libboost_python([0-9]+) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-python$(SOVERSION)/DEBIAN/shlibs
+	sed -i -r 's/^(libboost_mpi_python([0-9]+) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-mpi-python$(SOVERSION)/DEBIAN/shlibs
 ifeq ($(BUILD_NUMPY), yes)
-	sed -i -r 's/^(libboost_numpy([0-9]{2}) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-numpy$(SOVERSION)/DEBIAN/shlibs
+	sed -i -r 's/^(libboost_numpy([0-9]+) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-numpy$(SOVERSION)/DEBIAN/shlibs
 endif
 
 override_dh_gencontrol:
